--- a/index.html
+++ b/index.html
@@ -11,7 +11,69 @@
   </head>
 
   <body>
-    <h1>Hello, world!</h1>   
+    <header>
+      <div class="container-fluid">
+        <a href="javascript:;">
+          <img src="assets/images/ad_logo.png" alt="Appliances Direct logo" class="img-fluid">
+        </a>
+      </div>
+    </header>
+
+    <aside>
+
+    </aside>
+    
+    <main>
+      <div class="container-fluid">
+        <h1>Account overview</h1>
+        <div class="row g-3">
+          <div class="col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <h3 class="h3">Orders</h3>
+                <p>You have <a href="javascript:;">2 orders</a> scheduled to be delivered <strong>Tuesday 9th August</strong></p>
+                <a href="javascript:;" class="btn btn-primary btn-dark-blue">View orders</a>
+              </div>
+            </div>
+          </div>  
+  
+          <div class="col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <h3 class="h3">Payment details</h3>
+                <p>You have <strong>3 linked cards</strong></p>
+                <a href="javascript:;" class="btn btn-primary btn-dark-blue">View details</a>
+              </div>
+            </div>
+          </div>  
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-8">
+            <img src="assets/images/bid_logo.png" alt="Buy It Direct Group logo" class="img-fluid">
+            <small>Appliances Direct are part of the Buy It Direct Group; Reg. No. 04171412</small>
+          </div>
+
+          <div class="col-md-2">
+            <h5 class="h4">Opening times</h5>
+            <ul class="list-unstyled">
+              <li>Mon-Fri: 08:00 - 17:00</li>
+              <li>Sat: 10:00 - 16:00</li>
+              <li>Sun: Closed</li>
+            </ul>
+          </div>
+
+          <div class="col-md-2">
+            <h5 class="h4">Help and advice</h5>
+            <a href="tel:03300412271">03300 412271</a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
