--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <header class="header">
@@ -20,7 +20,7 @@
 
     <div class="container-fluid main-container">
       <div class="row g-5">
-        <div class="col-md-4">
+        <div class="col-md-4 sidebar-col">
           <aside class="sidebar">
             <h2 class="h2">Hey, Name</h2>
             <p>Credit balance to spend: £75.00 
@@ -127,7 +127,7 @@
           </aside>
         </div>
 
-        <div class="col-md-8">
+        <div class="col-md-8 main-col">
           <main class="account-overview">
             <h1 class="h1">Account overview</h1>
   
