--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <aside class="sidebar">
             <h2 class="h2">Hey, Name</h2>
             <p>Credit balance to spend: £75.00 
-              <i data-toggle="tooltip" data-placement="top" title="Lorem ipsum dolor sit amet, consectetur adipisicing elit.">
+              <i data-toggle="tooltip" data-placement="right" title="Lorem ipsum dolor sit amet, consectetur adipisicing elit.">
                 <svg class="icon tooltip-icon">
                   <use xlink:href="assets/images/sprite.svg#circle-info-solid"></use>
                 </svg>                
@@ -54,7 +54,7 @@
                 </li>
                 <li class="nav-item">
                   <a href="javascript:;" class="nav-link">
-                  <svg class="icon bars-solid">
+                  <svg class="icon">
                     <use xlink:href="assets/images/sprite.svg#star-regular"></use>
                     <use xlink:href="assets/images/sprite.svg#star-solid"></use>
                   </svg>                  
@@ -63,16 +63,16 @@
                 </li>
                 <li class="nav-item">
                   <a href="javascript:;" class="nav-link">
-                    <svg class="icon bars-solid">
+                    <svg class="icon">
                       <use xlink:href="assets/images/sprite.svg#box-regular"></use>
                       <use xlink:href="assets/images/sprite.svg#box-solid"></use>
                     </svg>                    
-                    Order History
+                    Order History <span class="badge badge-dark-blue">2</span>
                   </a>
                 </li>
                 <li class="nav-item">
                   <a href="javascript:;" class="nav-link">
-                    <svg class="icon bars-solid">
+                    <svg class="icon">
                       <use xlink:href="assets/images/sprite.svg#file-lines-regular"></use>
                       <use xlink:href="assets/images/sprite.svg#file-lines-solid"></use>
                     </svg>                    
@@ -81,7 +81,7 @@
                 </li>
                 <li class="nav-item">
                   <a href="javascript:;" class="nav-link">
-                    <svg class="icon bars-solid">
+                    <svg class="icon">
                       <use xlink:href="assets/images/sprite.svg#user-regular"></use>
                       <use xlink:href="assets/images/sprite.svg#user-solid"></use>
                     </svg>                    
@@ -90,7 +90,7 @@
                 </li>
                 <li class="nav-item">
                   <a href="javascript:;" class="nav-link">
-                    <svg class="icon bars-solid">
+                    <svg class="icon">
                       <use xlink:href="assets/images/sprite.svg#credit-card-regular"></use>
                       <use xlink:href="assets/images/sprite.svg#credit-card-solid"></use>
                     </svg>                    
@@ -99,7 +99,7 @@
                 </li>
                 <li class="nav-item">
                   <a href="javascript:;" class="nav-link">
-                    <svg class="icon bars-solid">
+                    <svg class="icon">
                       <use xlink:href="assets/images/sprite.svg#rectangle-ad-regular"></use>
                       <use xlink:href="assets/images/sprite.svg#rectangle-ad-solid"></use>
                     </svg>                    
@@ -108,7 +108,7 @@
                 </li>
                 <li class="nav-item">
                   <a href="javascript:;" class="nav-link">
-                  <svg class="icon bars-solid">
+                  <svg class="icon">
                       <use xlink:href="assets/images/sprite.svg#comment-dots-regular"></use>
                       <use xlink:href="assets/images/sprite.svg#comment-dots-solid"></use>
                   </svg>                  
@@ -118,7 +118,7 @@
               </ul>
 
               <a href="javascript:;" class="btn btn-link" id="btnSignout">
-                <svg class="icon bars-solid">
+                <svg class="icon">
                     <use xlink:href="assets/images/sprite.svg#arrow-right-from-bracket-solid"></use>
                 </svg>                
                 Sign out
