--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
+    <div class="preloader-container">
+      <div class="preloader">
+        <img src="assets/images/ad_text_logo.svg" alt="" class="img-fluid">
+      </div>
+    </div>
+
     <header class="header">
       <div class="container-fluid">
         <a href="index.html">
@@ -24,11 +30,11 @@
           <aside class="sidebar">
             <h2 class="h2">Hey, Name</h2>
             <p>Credit balance to spend: £75.00 
-              <i data-toggle="tooltip" data-placement="right" title="Lorem ipsum dolor sit amet, consectetur adipisicing elit.">
-                <svg class="icon tooltip-icon">
+              <i class="tooltip-toggle" data-tippy-offset="[-10,10]" data-tippy-placement="top-start" data-tippy-content="<strong>Tip:</strong> Use your credit balance during checkout for instant savings." >
+                <svg class="icon">
                   <use xlink:href="assets/images/sprite.svg#circle-info-solid"></use>
                 </svg>                
-              </i>
+              </i>              
             </p>
 
             <button class="btn btn-gray-100 collapse-toggler" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -160,15 +166,18 @@
               <form>
                 <div class="form-group">
                   <legend class="h4">How can we get in touch with you?</legend>
-  
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="emailCheckbox" value="email" name="contact">
-                    <label class="form-check-label" for="emailCheckbox">Email</label>
+                  <div class="form-check-inline">
+                    <div class="custom-control custom-checkbox ">
+                      <input type="checkbox" class="custom-control-input" id="emailCheckbox">
+                      <label class="custom-control-label" for="emailCheckbox">Email</label>
+                    </div>                
                   </div>
   
-                  <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="smsCheckbox" value="sms" name="contact">
-                    <label class="form-check-label" for="smsCheckbox">SMS</label>
+                  <div class="form-check-inline">
+                    <div class="custom-control custom-checkbox ">
+                      <input type="checkbox" class="custom-control-input" id="smsCheckbox">
+                      <label class="custom-control-label" for="smsCheckbox">SMS</label>
+                    </div>                
                   </div>
                 </div>
               </form>
@@ -210,8 +219,10 @@
         </div>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
