--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
+    <!-- preloader -->
     <div class="preloader-container">
       <div class="preloader">
         <img src="assets/images/ad_text_logo.svg" alt="" class="img-fluid">
       </div>
     </div>
 
+    <!-- header -->
     <header class="header">
       <div class="container-fluid">
         <a href="index.html">
@@ -24,6 +26,7 @@
       </div>
     </header>
 
+    <!-- main -->
     <div class="container-fluid main-container">
       <div class="row g-5">
         <div class="col-md-4 sidebar-col">
@@ -195,15 +198,16 @@
       </div>
     </div>
 
+    <!-- footer -->
     <footer class="footer">
       <div class="container-fluid">
         <div class="row gy-3">
-          <div class="col-md-4">
+          <div class="col-md-auto mr-md-auto">
             <img src="assets/images/bid_logo.png" alt="Buy It Direct Group logo" class="img-fluid">
             <small>Appliances Direct are part of the Buy It Direct Group; Reg. No. 04171412</small>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-3 col-lg-3">
             <h5 class="h4">Opening times</h5>
             <ul class="list-unstyled">
               <li>Mon-Fri: 08:00 - 17:00</li>
@@ -212,7 +216,7 @@
             </ul>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-3 col-lg-2">
             <h5 class="h4">Help and advice</h5>
             <a href="tel:03300412271">03300 412271</a>
           </div>
