Fix tooltip issue on mobile

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <aside class="sidebar">
             <h2 class="h2">Hey, Name</h2>
             <p>Credit balance to spend: £75.00 
-              <i class="tooltip-toggle" data-tippy-offset="[-10,10]" data-tippy-placement="top-start" data-tippy-content="<strong>Tip:</strong> Use your credit balance during checkout for instant savings." >
+              <i class="tooltip-toggle" data-tippy-placement="right" data-tippy-content="<strong>Tip:</strong> Use your credit balance during checkout for instant savings." >
                 <svg class="icon">
                   <use xlink:href="assets/images/sprite.svg#circle-info-solid"></use>
                 </svg>                
