Fix preloader bug on Firefox

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <!-- preloader -->
     <div class="preloader-container">
       <div class="preloader">
-        <img src="assets/images/ad_text_logo.svg" alt="" class="img-fluid" id="ad-text-logo">
+        <div class="logo-container">
+          <img src="assets/images/ad_text_logo.svg" alt="" id="ad-text-logo">
+        </div>
       </div>
     </div>
 
