--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="preloader-container">
       <div class="preloader">
         <div class="logo-container">
-          <img src="assets/images/ad_text_logo.svg" alt="" id="ad-text-logo">
+          <div id="ad-text-logo"></div>
+          <div id="ad-arrow-logo"></div>
         </div>
       </div>
     </div>
